# Projeto-Garagem

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_marca.py  0002_veiculo_capa.py  0003_alter_marca_nacionalidade.py  0003_modelo.py  0004_acessorio_cor.py  0004_remove_veiculo_categoria_remove_veiculo_marca.py  0005_alter_veiculo_options_remove_veiculo_capa_and_more.py  0005_veículo.py  0006_rename_veículo_veiculo.py  0007_veiculo_acessorios.py
garagem/models/: __init__.py  categoria.py  cor.py  marca.py  veiculo.py
garagem/serializers/: __init__.py  cor.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
usuario/migrations/: 0001_initial.py
